prototypes/v1/tests/elab/errors/pattern_matching/inexhaustive_fun_type.pion
def foo = fun(false: Bool) -> Type;
